Fixed more css, truncated everything that needs it for now

--- a/app/assets/stylesheets/inventory.css.scss
+++ b/app/assets/stylesheets/inventory.css.scss
@@ -20,6 +20,9 @@
                 font-weight: bold;
             }
         }
+        & tr {
+            height: 50px;
+        }
         @media screen and (min-width: 1024px) {
             & .game-title {
                 min-width: 22rem;
